# etu-sampler-2022

./: .gitignore  CMakeLists.txt  Makefile
libsampler/: CMakeLists.txt  sampler.c  sampler.h
programs/: CMakeLists.txt  bad.c  empty.c  inttrapez-1full.c  inttrapez-1part.c  inttrapez-2full.c  inttrapez-2part.c  simple.c  test_bubble.c  test_bubble2.c  test_cyc.c  test_sub.c
scripts/: dot.py  join.py  multifilter.py  nruns.sh  runtograph.py  short.py
tools/: CMakeLists.txt  echo.sh  fmtdot  fmtshort  fmttable  ign.sh  join.py  multifilter.py  process.py  repeat.c
tools/misc/: nruns.sh
